syntax = "proto3";

package auth;

option go_package = "github.com/SteinerLabs/lms/backend/services/auth/proto";

import "google/protobuf/timestamp.proto";

// AuthService provides authentication and authorization functionality
service AuthService {
  // User management
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc GetUser(GetUserRequest) returns (User);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  
  // Authentication
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUserPermissions(GetUserPermissionsRequest) returns (GetUserPermissionsResponse);
  
  // Role management
  rpc CreateRole(CreateRoleRequest) returns (Role);
  rpc GetRole(GetRoleRequest) returns (Role);
  rpc UpdateRole(UpdateRoleRequest) returns (Role);
  rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse);
  rpc AssignRoleToUser(AssignRoleToUserRequest) returns (AssignRoleToUserResponse);
  rpc RemoveRoleFromUser(RemoveRoleFromUserRequest) returns (RemoveRoleFromUserResponse);
}

// User represents a user in the system
message User {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  bool active = 5;
  bool email_verified = 6;
  bool mfa_enabled = 7;
  google.protobuf.Timestamp last_login = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// CreateUserRequest is the request for creating a new user
message CreateUserRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

// GetUserRequest is the request for getting a user by ID
message GetUserRequest {
  string id = 1;
}

// UpdateUserRequest is the request for updating a user
message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  bool active = 5;
}

// DeleteUserRequest is the request for deleting a user
message DeleteUserRequest {
  string id = 1;
}

// DeleteUserResponse is the response for deleting a user
message DeleteUserResponse {
  bool success = 1;
}

// ValidateTokenRequest is the request for validating a JWT token
message ValidateTokenRequest {
  string token = 1;
}

// ValidateTokenResponse is the response for validating a JWT token
message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  repeated string permissions = 3;
}

// GetUserPermissionsRequest is the request for getting a user's permissions
message GetUserPermissionsRequest {
  string user_id = 1;
}

// GetUserPermissionsResponse is the response for getting a user's permissions
message GetUserPermissionsResponse {
  repeated string permissions = 1;
}

// Role represents a role in the system
message Role {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// CreateRoleRequest is the request for creating a new role
message CreateRoleRequest {
  string name = 1;
  string description = 2;
}

// GetRoleRequest is the request for getting a role by ID
message GetRoleRequest {
  string id = 1;
}

// UpdateRoleRequest is the request for updating a role
message UpdateRoleRequest {
  string id = 1;
  string name = 2;
  string description = 3;
}

// DeleteRoleRequest is the request for deleting a role
message DeleteRoleRequest {
  string id = 1;
}

// DeleteRoleResponse is the response for deleting a role
message DeleteRoleResponse {
  bool success = 1;
}

// AssignRoleToUserRequest is the request for assigning a role to a user
message AssignRoleToUserRequest {
  string user_id = 1;
  string role_id = 2;
}

// AssignRoleToUserResponse is the response for assigning a role to a user
message AssignRoleToUserResponse {
  bool success = 1;
}

// RemoveRoleFromUserRequest is the request for removing a role from a user
message RemoveRoleFromUserRequest {
  string user_id = 1;
  string role_id = 2;
}

// RemoveRoleFromUserResponse is the response for removing a role from a user
message RemoveRoleFromUserResponse {
  bool success = 1;
}